# algorep

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: algorep.yml
proto/: append_entry.proto  command_entry.proto  election_timeout.proto  log_entry.proto  message.proto  persistent_state.proto  search_leader.proto  speed.proto  vote.proto
src/: main.cc
src/mpi/: README.md  mpi_process.cc  mpi_process.hh  mpi_rpc.cc  mpi_rpc.hh
src/raft/: README.md  raft_client.cc  raft_client.hh  raft_clock.cc  raft_clock.hh  raft_controller.cc  raft_controller.hh  raft_server.cc  raft_server.hh  raft_storage.cc  raft_storage.hh  raft_types.hh
src/rpc/: rpc.hh
src/storage/: storage.hh
src/utils/: arg_parser.cc  arg_parser.hh  serialization.cc  serialization.hh  types.hh
tests/: gen_scenario.py  test.py  utils.py
tests/proto/: log_entry_pb2.py  persistent_state_pb2.py
